--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
 <body>
-<h1>Hello World</h1>h1>
-<p>I' hosted with Github pages.</p>
+<h1>Hello World</h1>
+<p>I'm hosted with Github pages.</p>
 </body>
 </html>
