Added a CSS file
Added a CSS file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!Doctype html>
 <html>
+<head>
+<title>Nic's website</title>
+<link rel='stylesheet' type='text/css' href=indexstyle.css>
+</head>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with Github pages.</p>
