Trying to merge first site with this github site
Copy and pasted text from first site to try and merge the two sites

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-<title>Nic's website</title>
-<link rel='stylesheet' type='text/css' href=indexstyle.css>
-</head>
+<title>Nicole's first site</title>
+<link rel='stylesheet' type='text/css' href=style.css>
+<h1><strong>Hello</strong></h1>
+<p> some tex </p>
+<h2><em>About Me</em></h2>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with Github pages.</p>
+<ul>
+<li>Graduate with a BSc in Psychology from Queen Mary University London</li>
+<li>Wrote my dissertation on the emotions of goats and spent 6 weeks conducting a Pavlov like experiment on them to improve their welfare</li>
+<li>Currently working at the <a href="http://www.stammeringcentre.org/mpc-home">Michael Palin Centre for Stammering</a></li>
+</ul>
 </body>
-</html>
